--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=
-spring.datasource.url=jdbc:mysql://localhost:3333/bank
+server.port=9000
+spring.datasource.url=jdbc:mysql://localhost:3306/bank
 spring.datasource.username=root
 #spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
